--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,11 @@ excerpt_separator: <!--more-->
       <ul class='post-list'>
         {% for post in site.posts limit:1 offset:1 %}
         <li>
-          <span class='post-meta strong-blog-font'>{{ post.date | date: "%b %-d, %Y" }}</span>
+          <span class='post-meta strong-blog-font'>
+            {% unless post.pinned %}
+            {{ post.date | date: "%b %-d, %Y" }}
+            {% endunless %}
+          </span>
           <h2>
             <a class='post-link strong-blog-font' href='{{ post.url | relative_url }}'>{{ post.title | escape }}</a>
           </h2>
@@ -25,7 +29,6 @@ excerpt_separator: <!--more-->
           </a>
         </p>
         {% endfor %}
-        <!-- Note: add tag list or some way to eventually get to an old post -->
       </ul>
 
 
@@ -33,84 +36,47 @@ excerpt_separator: <!--more-->
     <div class='col s12 m8 l7'>
       {% include card-screenshot.html %}
     </div>
-    <!-- pricing -->
-    <!-- <div class='row'>
-      <div class='col s12 m8 l7'>
-        <div class="collection">
-          {% for topic in site.pricing %}
-              <a href="{{ topic.url }}"  class="collection-item"><span class="badge">{{ topic.name }}</span>SEO for {{ topic.name }} law firms at {{ topic.pricing }} pricing</a>
-          {% endfor %}
-        </div>
-      </div>
-    </div> -->
-    <!-- end pricing -->
-  </div>
-
-  <div class="divider"></div>
-  <div class="section">
-    <br/>
-
-
-
-
-
-
-
-
-
-  <div class="row">
-    <div class="col s12 m7 push-m5">
-      <img class="materialboxed center-align " width="650" src="{{ '/assets/rene-m-paccha-chicago.jpg' | relative_url }}">
-    </div>
-
-    <div class="col s12 m5 pull-m7">
-
-    <br />
-
-      {% for post in site.posts limit:1  %}
-      {% assign currentdate = post.date | date: "%B" %}
-      {% if currentdate != date %}
-      {% unless forloop.first %}</ul>{% endunless %}
-
-        <span id="y{{post.date | date: "%Y %B"}}"></span>
-
-
-
-
-
-
-      <ul class="collection with-header">
-        <li class="collection-header">
-        <h4>Why get law practice SEO à la carte?</h4>
-        </li>
-        {% assign date = currentdate %}
-        {% endif %}
-        <li><a href="{{ post.url }}">
-<div class="collection-item">
-          {{ post.title }}
-        </div>
-        </a></li>
-        {% if forloop.last %}</ul>{% endif %}
-        {% endfor %}
-
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col s7 offset-s5">
-
-    </div>
-
-  </div>
 </div>
 
 
-  <div class="section">
+<div class="section">
+  <br/>
 
-        <!-- <h4>Get law SEO à la carte</h4> -->
+  <div class="col s12 m8 offset-m2 l6 offset-13">
+    <div class="card-panel grey lighten-5 z-depth-1">
+      <div class="row v-align-wrapper">
+        <div class="col s12 m2">
+          <img class="materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago.jpg' | relative_url }}">
+        </div>
+        <div class="posts-list">
+          <div class="col s12 m10">
 
+            <br />
 
+            {% for post in site.posts limit:1  %}
+            {% assign currentdate = post.date | date: "%Y" %}
+            {% if currentdate != date %}
+            {% unless forloop.first %}</ul>{% endunless %}
+            <span id="y{{post.date | date: "%Y %B"}}">{{currentdate}}</span>
+            <ul class="collection with-header">
+              <li class="collection-header">
+                <h4>Posts</h4>
+              </li>
+              {% assign date = currentdate %}
+              {% endif %}
+              <li><a href="{{ post.url }}">
+                <div class="collection-item">
+                  {{ post.title }}
+                </div>
+              </a></li>
+              {% if forloop.last %}</ul>{% endif %}
+              {% endfor %}
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-
-  </div>
+</div>
