--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,13 +11,9 @@ excerpt_separator: <!--more-->
       <div class="intro-wrap">
         <div class="name-text">Rene M. Paccha</div>
         <div class="paragraph-light">SEO, Case Linguist LLC</div>
-        <h1 class="heading-jumbo">Case Linguist LLC provides internet marketing services for spanish speaking audiences that can be catered to your needs.</h1>
-
+        <h1 class="heading-jumbo">Case Linguist LLC provides internet marketing services for English and Spanish speaking audiences that can be catered to your needs.</h1>
       </div>
-
-
     </div>
-
   </div>
 
 
