--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,4 +36,10 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
+
+  {% if jekyll.environment == 'production' %}
+  {% include google-analytics.html %}
+  {% include alexa.html %}
+  {% endif %}
+
 </head>
