--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@ excerpt_separator: <!--more-->
 
 
   <!-- adding splash message -->
+  <!-- ok -->
   <div id="slide" class="splash-section">
     <div class="msg-container">
       <div class="intro-wrap">
@@ -23,11 +24,11 @@ excerpt_separator: <!--more-->
   </div>
 
 
+  <!-- Pinned Post -->
+  <!-- ok -->
   <div class='row'>
-    <div class='col s12 m4 l5'>
-      <!-- <h2 class='page-heading strong-blog-font'>
-        Pinned Post
-      </h2> -->
+    <div class=''>
+
       {{ content }}
       <ul class='post-list'>
         {% for post in site.posts limit:1 offset:1 %}
@@ -49,25 +50,32 @@ excerpt_separator: <!--more-->
         </p>
         {% endfor %}
       </ul>
-
-
     </div>
-    <div class='col s12 m8 l7'>
+
+
+
+    <div class='col s12 m8 l7 hide-on-small-only'>
+      <!-- hiding on small screen -->
       {% include card-screenshot.html %}
     </div>
 </div>
 
 
+
+
+<div class='row'>
+  <div class='col s12 m4 l5'>
+
+  </div>
+</div>
+
 <div class="section">
   <br/>
 
-  <div class="col s12 m6">
+  <div class="col s12 m6 l3">
     <div class="card-panel">
       <div class="row v-align-wrapper">
-        <div class="col s12 m6">
-          <!-- image -->
-          <img class="materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago-250.png' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.png' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.png' | relative_url }} 1000w" alt="rene m paccha professional headshot with willis tower background">
-        </div>
+
         <div class="posts-list">
           <div class="col s12 m6">
 
@@ -100,11 +108,23 @@ excerpt_separator: <!--more-->
 
             </div>
 
+
+        <!-- image start -->
+        <div class="col s12 m6">
+          <!-- image -->
+          <img class="materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago-250.png' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.png' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.png' | relative_url }} 1000w" alt="rene m paccha professional headshot with willis tower background">
+        </div>
+
+        <!-- post list -->
+
           </div>
         </div>
       </div>
     </div>
   </div>
+
+
+
 </div>
 
 {% include photo-pop.html %}
