--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ excerpt_separator: <!--more-->
 <div class='home home-section section'>
   <div class="logo-wrap valign-wrapper">
     <div class="row">
-    <span class="center-align"><img  src="assets/logo.png" width="350" alt="logo"></span>
+      <span class="center-align"><img  src="assets/logo.png" width="350" alt="logo"></span>
     </div>
   </div>
 
@@ -35,7 +35,7 @@ excerpt_separator: <!--more-->
         <li>
           <span class='post-meta strong-blog-font'>
             {% unless post.pinned %}
-            {{ post.date | date: "%b %-d, %Y" }}
+            {{ post.date | date: "%B %e, %Y" }}
             {% endunless %}
           </span>
           <h2>
@@ -58,74 +58,81 @@ excerpt_separator: <!--more-->
       <!-- hiding on small screen -->
       {% include card-screenshot.html %}
     </div>
-</div>
-
-
-
-
-<div class='row'>
-  <div class='col s12 m4 l5'>
-
   </div>
-</div>
 
-<div class="section">
-  <br/>
 
-  <div class="col s12 m6 l3">
-    <div class="row v-align-wrapper">
 
-      <div class="posts-list">
-        <div class="col s12 m6 secondary-container">
 
-          <br />
-          <h3 class='page-heading strong-blog-font'>
-            Posts
-          </h3>
+  <div class='row'>
+    <div class='col s12 m4 l5'>
 
-          {% for post in site.posts limit:1  %}
-          {% assign currentdate = post.date | date: "%Y %B" %}
-          {% if currentdate != date %}
-          {% unless forloop.first %}</ul>{% endunless %}
-          <span id="y{{post.date | date: "%Y %B"}}">{{currentdate}}</span>
-          <ul class="collection with-header">
-            {% assign date = currentdate %}
-            {% endif %}
-            <li>
+    </div>
+  </div>
 
-              <a href="{{ post.url }}">
-              <div class="collection-item">
-                <span class="badge  btn btn-small btn-flat waves-effect waves-blue ilike-blue-container ">{{ post.date | date:"%m/%d" }}</span>
-                    {{ post.title }}
-              </div>
+  <div class="section">
+    <br/>
 
-            </a>
+    <div class="col s12 m6 l3">
+      <div class="row v-align-wrapper">
 
-          </li>
-            {% if forloop.last %}</ul>{% endif %}
-            {% endfor %}
+        <div class="posts-list">
+          <div class="col s12 m6 secondary-container">
 
+            <!-- <br /> -->
+
+            <ul class="collection with-header">
+              <!-- set post limit -->
+              <li class="collection-header">
+                <h3 class='page-heading strong-blog-font'>
+                  Posts
+                </h3>
+              </li>
+
+              {% for post in site.posts limit:9 | reverse %}
+
+              {% assign currentdate = post.date | date: "%b %e - %a" %}
+              {% if currentdate != date %}
+              <!-- {% unless forloop.first %}</ul>{% endunless %} -->
+
+
+              {% assign date = currentdate %}
+
+
+              {% endif %}
+              <li class="collection-item">
+
+                <a href="{{ post.url }}">
+                  <!-- {% if forloop.first %}<span class="new badge"></span></a>{% endif %}                                       -->
+                  <div class="collection-content-starts">{{ post.title }}
+                    <!-- secondary date content -->
+
+                    <span class="badge btn btn-small btn-flat waves-effect waves-blue ilike-blue-container">
+
+                      <span id='y_{{post.date | date: "%Y_%B"}}' class="shifty-date date-sub-display">{{currentdate}}</span>
+                    </span>
+                  </div>
+                </a>
+              </li>
+              {% if forloop.last %}</ul>{% endif %}
+              {% endfor %}
+            </div>
           </div>
-
-
-      <!-- image start -->
-      <div class="col s12 m6">
-        <!-- image -->
-        <img class="materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago-250.png' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.png' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.png' | relative_url }} 1000w" alt="rene m paccha professional headshot with willis tower background">
-      </div>
-
-      <!-- post list -->
-
         </div>
-    </div>
-    
-    <div class="card-panel busy-card">
       </div>
+    </div>
+  </div>
+  <!-- headshot section -->
+  <div class="divider"></div>
+  <div class="section">
+
+      <a href="{{ '/about' | relative_url }}"><h4 class="flow-text">Based in Chicago, IL</h4></a>    
+    <!-- image start -->
+    <div class="col s12 m6">
+
+      <!-- image -->
+      <img class="needs-to-be-own-thing materialboxed center-align responsive-img " width="650" src="{{ '/assets/rene-m-paccha-chicago-250.png' | relative_url }}" srcset="{{ '/assets/rene-m-paccha-chicago-500.png' | relative_url }} 500w, {{ '/assets/rene-m-paccha-chicago.png' | relative_url }} 1000w" alt="rene m paccha professional headshot with willis tower background">
     </div>
   </div>
 
 
-
-</div>
-
-{% include photo-pop.html %}
+  {% include photo-pop.html %}
