--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title strong-blog-font" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta strong-blog-font"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: "%b %-d, %Y" }}
+        {{ page.date | date: "%A, %B %e, %Y" }}
     </time>{% if page.author %}<span itemprop="author" itemscope itemtype="http://schema.org/Person"></span>{% endif %}</p>
   </header>
 
